finished practice activity 4.2

--- a/practice_activities/4.1_webscraping/Practice_Activity_4_1_Webscraping.ipynb
+++ b/practice_activities/4.1_webscraping/Practice_Activity_4_1_Webscraping.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "metadata": {
         "id": "XZhT8jhbuZSg"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 29,
       "metadata": {
         "id": "xvYzbSospYVu"
       },
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 30,
       "metadata": {
         "id": "e0jpmfwtpaEB"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 31,
       "metadata": {
         "id": "4691d-EGEwc0"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 32,
       "metadata": {
         "id": "E0Q0sa46DvTZ"
       },
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 33,
       "metadata": {
         "id": "sRBSqVGlYhuT"
       },
@@ -186,7 +186,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
             "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n",
+            "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n",
             "\u001b[0;32m----> 1\u001b[0m table \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtable\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n",
             "\u001b[1;32m      2\u001b[0m                   attrs\u001b[38;5;241m=\u001b[39m{\n",
             "\u001b[1;32m      3\u001b[0m                       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwikitable sortable\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n",
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 34,
       "metadata": {
         "id": "1M23w-PPtUyw"
       },
@@ -317,9 +317,213 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>city</th>\n",
+              "      <th>state</th>\n",
+              "      <th>2023 estimate</th>\n",
+              "      <th>2023 census</th>\n",
+              "      <th>Change</th>\n",
+              "      <th>land area (miles^2)</th>\n",
+              "      <th>landarea (kilometer^2)</th>\n",
+              "      <th>density (miles^2)</th>\n",
+              "      <th>density (kilometer^2)</th>\n",
+              "      <th>location</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>New York</td>\n",
+              "      <td>NY</td>\n",
+              "      <td>8,258,035\\n</td>\n",
+              "      <td>8,804,190\\n</td>\n",
+              "      <td>−6.20%\\n</td>\n",
+              "      <td>300.5\\n</td>\n",
+              "      <td>778.3\\n</td>\n",
+              "      <td>29,298\\n</td>\n",
+              "      <td>11,312\\n</td>\n",
+              "      <td>40°40′N 73°56′W﻿ / ﻿40.66°N 73.94°W﻿ / 40.66; ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Los Angeles</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>3,820,914\\n</td>\n",
+              "      <td>3,898,747\\n</td>\n",
+              "      <td>−2.00%\\n</td>\n",
+              "      <td>469.5\\n</td>\n",
+              "      <td>1,216.0\\n</td>\n",
+              "      <td>8,304\\n</td>\n",
+              "      <td>3,206\\n</td>\n",
+              "      <td>34°01′N 118°25′W﻿ / ﻿34.02°N 118.41°W﻿ / 34.02...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Chicago</td>\n",
+              "      <td>IL</td>\n",
+              "      <td>2,664,452\\n</td>\n",
+              "      <td>2,746,388\\n</td>\n",
+              "      <td>−2.98%\\n</td>\n",
+              "      <td>227.7\\n</td>\n",
+              "      <td>589.7\\n</td>\n",
+              "      <td>12,061\\n</td>\n",
+              "      <td>4,657\\n</td>\n",
+              "      <td>41°50′N 87°41′W﻿ / ﻿41.84°N 87.68°W﻿ / 41.84; ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Houston</td>\n",
+              "      <td>TX</td>\n",
+              "      <td>2,314,157\\n</td>\n",
+              "      <td>2,304,580\\n</td>\n",
+              "      <td>+0.42%\\n</td>\n",
+              "      <td>640.4\\n</td>\n",
+              "      <td>1,658.6\\n</td>\n",
+              "      <td>3,599\\n</td>\n",
+              "      <td>1,390\\n</td>\n",
+              "      <td>29°47′N 95°23′W﻿ / ﻿29.79°N 95.39°W﻿ / 29.79; ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Phoenix</td>\n",
+              "      <td>AZ</td>\n",
+              "      <td>1,650,070\\n</td>\n",
+              "      <td>1,608,139\\n</td>\n",
+              "      <td>+2.61%\\n</td>\n",
+              "      <td>518.0\\n</td>\n",
+              "      <td>1,341.6\\n</td>\n",
+              "      <td>3,105\\n</td>\n",
+              "      <td>1,199\\n</td>\n",
+              "      <td>33°34′N 112°05′W﻿ / ﻿33.57°N 112.09°W﻿ / 33.57...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>331</th>\n",
+              "      <td>Yuma</td>\n",
+              "      <td>AZ</td>\n",
+              "      <td>100,858\\n</td>\n",
+              "      <td>95,548\\n</td>\n",
+              "      <td>+5.56%\\n</td>\n",
+              "      <td>120.7\\n</td>\n",
+              "      <td>312.6\\n</td>\n",
+              "      <td>792\\n</td>\n",
+              "      <td>306\\n</td>\n",
+              "      <td>32°31′N 114°31′W﻿ / ﻿32.52°N 114.52°W﻿ / 32.52...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>332</th>\n",
+              "      <td>New Bedford</td>\n",
+              "      <td>MA</td>\n",
+              "      <td>100,695\\n</td>\n",
+              "      <td>101,079\\n</td>\n",
+              "      <td>−0.38%\\n</td>\n",
+              "      <td>20.0\\n</td>\n",
+              "      <td>51.8\\n</td>\n",
+              "      <td>5,054\\n</td>\n",
+              "      <td>1,951\\n</td>\n",
+              "      <td>41°40′N 70°56′W﻿ / ﻿41.66°N 70.94°W﻿ / 41.66; ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>333</th>\n",
+              "      <td>Suffolk</td>\n",
+              "      <td>VA</td>\n",
+              "      <td>100,659\\n</td>\n",
+              "      <td>94,324\\n</td>\n",
+              "      <td>+6.72%\\n</td>\n",
+              "      <td>399.2\\n</td>\n",
+              "      <td>1,033.9\\n</td>\n",
+              "      <td>236\\n</td>\n",
+              "      <td>91\\n</td>\n",
+              "      <td>36°42′N 76°38′W﻿ / ﻿36.70°N 76.63°W﻿ / 36.70; ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>334</th>\n",
+              "      <td>Hesperia</td>\n",
+              "      <td>CA</td>\n",
+              "      <td>100,633\\n</td>\n",
+              "      <td>99,818\\n</td>\n",
+              "      <td>+0.82%\\n</td>\n",
+              "      <td>72.7\\n</td>\n",
+              "      <td>188.3\\n</td>\n",
+              "      <td>1,373\\n</td>\n",
+              "      <td>530\\n</td>\n",
+              "      <td>34°24′N 117°19′W﻿ / ﻿34.40°N 117.32°W﻿ / 34.40...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>335</th>\n",
+              "      <td>Davenport</td>\n",
+              "      <td>IA</td>\n",
+              "      <td>100,354\\n</td>\n",
+              "      <td>101,724\\n</td>\n",
+              "      <td>−1.35%\\n</td>\n",
+              "      <td>63.8\\n</td>\n",
+              "      <td>165.2\\n</td>\n",
+              "      <td>1,594\\n</td>\n",
+              "      <td>615\\n</td>\n",
+              "      <td>41°34′N 90°36′W﻿ / ﻿41.56°N 90.60°W﻿ / 41.56; ...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>336 rows × 10 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            city  ...                                           location\n",
+              "0       New York  ...  40°40′N 73°56′W﻿ / ﻿40.66°N 73.94°W﻿ / 40.66; ...\n",
+              "1    Los Angeles  ...  34°01′N 118°25′W﻿ / ﻿34.02°N 118.41°W﻿ / 34.02...\n",
+              "2        Chicago  ...  41°50′N 87°41′W﻿ / ﻿41.84°N 87.68°W﻿ / 41.84; ...\n",
+              "3        Houston  ...  29°47′N 95°23′W﻿ / ﻿29.79°N 95.39°W﻿ / 29.79; ...\n",
+              "4        Phoenix  ...  33°34′N 112°05′W﻿ / ﻿33.57°N 112.09°W﻿ / 33.57...\n",
+              "..           ...  ...                                                ...\n",
+              "331         Yuma  ...  32°31′N 114°31′W﻿ / ﻿32.52°N 114.52°W﻿ / 32.52...\n",
+              "332  New Bedford  ...  41°40′N 70°56′W﻿ / ﻿41.66°N 70.94°W﻿ / 41.66; ...\n",
+              "333      Suffolk  ...  36°42′N 76°38′W﻿ / ﻿36.70°N 76.63°W﻿ / 36.70; ...\n",
+              "334     Hesperia  ...  34°24′N 117°19′W﻿ / ﻿34.40°N 117.32°W﻿ / 34.40...\n",
+              "335    Davenport  ...  41°34′N 90°36′W﻿ / ﻿41.56°N 90.60°W﻿ / 41.56; ...\n",
+              "\n",
+              "[336 rows x 10 columns]"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "pd.DataFrame(rows)"
       ]
@@ -360,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 36,
       "metadata": {
         "id": "YnGD1hMbpv7H"
       },
@@ -513,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 37,
       "metadata": {
         "id": "4BKvPxa9qJ2-"
       },
@@ -525,7 +729,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n",
+            "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n",
             "\u001b[0;32m----> 1\u001b[0m pd\u001b[38;5;241m.\u001b[39mread_html(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://en.wikipedia.org/wiki/List_of_United_States_cities_by_population\u001b[39m\u001b[38;5;124m\"\u001b[39m, attrs \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwikitable sortable\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstyle\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext-align:center\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n",
             "\n",
             "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/io/html.py:1240\u001b[0m, in \u001b[0;36mread_html\u001b[0;34m(io, match, flavor, header, index_col, skiprows, attrs, parse_dates, thousands, encoding, decimal, converters, na_values, keep_default_na, displayed_only, extract_links, dtype_backend, storage_options)\u001b[0m\n",
@@ -705,7 +909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -716,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -730,28 +934,14 @@
       "cell_type": "code",
       "execution_count": 40,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "execution_count": null,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "tables = soup.find_all(\"div\", {\"id\": \"courseinventorycontainer\"})\n",
-        "\n",
-        "\n",
-        "len(tables)"
+        "page = soup.find_all(\"div\", {\"class\": \"courseblock\"})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -776,7 +966,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "page = soup.find_all(\"div\", {\"class\": \"courseblock\"})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
       "metadata": {
         "id": "EW2sWIGavIFc"
       },
@@ -788,18 +987,18 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[41], line 8\u001b[0m\n",
+            "Cell \u001b[0;32mIn[43], line 8\u001b[0m\n",
             "\u001b[1;32m      4\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n",
             "\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# iterate over all vals in the courses\u001b[39;00m\n",
             "\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#each course is seperated by div\u001b[39;00m\n",
-            "\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m course \u001b[38;5;129;01min\u001b[39;00m page\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m2\u001b[39m:]:\n",
+            "\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m courseblock \u001b[38;5;129;01min\u001b[39;00m page\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdiv\u001b[39m\u001b[38;5;124m\"\u001b[39m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcourseblock\u001b[39m\u001b[38;5;124m\"\u001b[39m})[\u001b[38;5;241m2\u001b[39m:]:\n",
             "\u001b[1;32m      9\u001b[0m \n",
             "\u001b[1;32m     10\u001b[0m     \u001b[38;5;66;03m# Get all the cells (<td>) in the row.\u001b[39;00m\n",
-            "\u001b[1;32m     11\u001b[0m     cells \u001b[38;5;241m=\u001b[39m course\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;32m     11\u001b[0m     cells \u001b[38;5;241m=\u001b[39m courseblock\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
             "\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# The information we need is the text between tags.\u001b[39;00m\n",
             "\u001b[1;32m     14\u001b[0m \n",
             "\u001b[1;32m     15\u001b[0m     \u001b[38;5;66;03m# Find the the name of the city in cell[0]\u001b[39;00m\n",
-            "\u001b[1;32m     16\u001b[0m     \u001b[38;5;66;03m# which for most city is contained in the <a> tag\u001b[39;00m\n",
+            "\u001b[1;32m     16\u001b[0m     \u001b[38;5;66;03m# which for most city is contained in the <strong> tag\u001b[39;00m\n",
             "\n",
             "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/bs4/element.py:2433\u001b[0m, in \u001b[0;36mResultSet.__getattr__\u001b[0;34m(self, key)\u001b[0m\n",
             "\u001b[1;32m   2431\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n",
@@ -820,19 +1019,17 @@
         "\n",
         "# iterate over all vals in the courses\n",
         "#each course is seperated by div\n",
-        "for course in page.find_all(\"p\")[2:]:\n",
+        "for courseblock in page.find_all(\"div\", {\"class\": \"courseblock\"})[2:]:\n",
         "\n",
         "    # Get all the cells (<td>) in the row.\n",
-        "    cells = course.find_all(\"p\")\n",
+        "    cells = courseblock.find_all(\"p\")\n",
         "\n",
         "    # The information we need is the text between tags.\n",
         "\n",
         "    # Find the the name of the city in cell[0]\n",
-        "    # which for most city is contained in the <a> tag\n",
+        "    # which for most city is contained in the <strong> tag\n",
         "    course_tag = cells[0].find(\"strong\") or cells[0]\n",
         "    course = course_tag.text\n",
-        "\n",
-        "\n",
         "\n",
         "    # Append this data.\n",
         "    rows.append({\n",
