finished practice activity 4.1

--- a/practice_activities/4.1_webscraping/Practice_Activity_4_1_Webscraping.ipynb
+++ b/practice_activities/4.1_webscraping/Practice_Activity_4_1_Webscraping.ipynb
@@ -932,15 +932,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "page = soup.find_all(\"div\", {\"class\": \"courseblock\"})"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 41,
       "metadata": {},
       "outputs": [
@@ -966,7 +957,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -975,42 +966,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 76,
       "metadata": {
         "id": "EW2sWIGavIFc"
       },
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "ResultSet object has no attribute 'find_all'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[43], line 8\u001b[0m\n",
-            "\u001b[1;32m      4\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n",
-            "\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# iterate over all vals in the courses\u001b[39;00m\n",
-            "\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#each course is seperated by div\u001b[39;00m\n",
-            "\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m courseblock \u001b[38;5;129;01min\u001b[39;00m page\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdiv\u001b[39m\u001b[38;5;124m\"\u001b[39m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcourseblock\u001b[39m\u001b[38;5;124m\"\u001b[39m})[\u001b[38;5;241m2\u001b[39m:]:\n",
-            "\u001b[1;32m      9\u001b[0m \n",
-            "\u001b[1;32m     10\u001b[0m     \u001b[38;5;66;03m# Get all the cells (<td>) in the row.\u001b[39;00m\n",
-            "\u001b[1;32m     11\u001b[0m     cells \u001b[38;5;241m=\u001b[39m courseblock\u001b[38;5;241m.\u001b[39mfind_all(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# The information we need is the text between tags.\u001b[39;00m\n",
-            "\u001b[1;32m     14\u001b[0m \n",
-            "\u001b[1;32m     15\u001b[0m     \u001b[38;5;66;03m# Find the the name of the city in cell[0]\u001b[39;00m\n",
-            "\u001b[1;32m     16\u001b[0m     \u001b[38;5;66;03m# which for most city is contained in the <strong> tag\u001b[39;00m\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/bs4/element.py:2433\u001b[0m, in \u001b[0;36mResultSet.__getattr__\u001b[0;34m(self, key)\u001b[0m\n",
-            "\u001b[1;32m   2431\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n",
-            "\u001b[1;32m   2432\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[39;00m\n",
-            "\u001b[0;32m-> 2433\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n",
-            "\u001b[1;32m   2434\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResultSet object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m. You\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mre probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m key\n",
-            "\u001b[1;32m   2435\u001b[0m     )\n",
-            "\n",
-            "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'find_all'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#turn html into actual dataframe\n",
         "\n",
@@ -1019,22 +979,137 @@
         "\n",
         "# iterate over all vals in the courses\n",
         "#each course is seperated by div\n",
-        "for courseblock in page.find_all(\"div\", {\"class\": \"courseblock\"})[2:]:\n",
+        "for courseblock in page:\n",
         "\n",
-        "    # Get all the cells (<td>) in the row.\n",
-        "    cells = courseblock.find_all(\"p\")\n",
+        "    # course_title\n",
+        "    course_tag = courseblock.find(\"p\", {\"class\": \"courseblocktitle\"})\n",
+        "    course = course_tag.get_text().strip()\n",
         "\n",
-        "    # The information we need is the text between tags.\n",
-        "\n",
-        "    # Find the the name of the city in cell[0]\n",
-        "    # which for most city is contained in the <strong> tag\n",
-        "    course_tag = cells[0].find(\"strong\") or cells[0]\n",
-        "    course = course_tag.text\n",
-        "\n",
+        "    #term offered\n",
+        "    term_tag = courseblock.find(\"div\", {\"class\": \"noindent courseextendedwrap\"})\n",
+        "    term = term_tag.get_text().strip()\n",
         "    # Append this data.\n",
         "    rows.append({\n",
-        "        \"course\": course\n",
+        "        \"course\": course,\n",
+        "        \"term offered\": term\n",
         "    })\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>course</th>\n",
+              "      <th>term offered</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>DATA 100. Data Science for All I.</td>\n",
+              "      <td>Term Typically Offered: F, W, SP2020-21 or lat...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>DATA 301. Introduction to Data Science.</td>\n",
+              "      <td>Term Typically Offered: F, W, SPPrerequisite: ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>DATA 401. Data Science Process and Ethics.</td>\n",
+              "      <td>Term Typically Offered: FPrerequisites: DATA 3...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>DATA 402. Mathematical Foundations of Data Sci...</td>\n",
+              "      <td>Term Typically Offered: FPrerequisites: CSC 46...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>DATA 403. Data Science Projects Laboratory.</td>\n",
+              "      <td>Term Typically Offered: FConcurrent: DATA 401 ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>69</th>\n",
+              "      <td>STAT 551. Statistical Learning with R.</td>\n",
+              "      <td>Term Typically Offered: FPrerequisite: STAT 30...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>70</th>\n",
+              "      <td>STAT 566. Graduate Consulting Practicum.</td>\n",
+              "      <td>Term Typically Offered: SPPrerequisite: STAT 4...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>71</th>\n",
+              "      <td>STAT 570. Selected Advanced Topics.</td>\n",
+              "      <td>Term Typically Offered: TBDPrerequisite: Gradu...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>72</th>\n",
+              "      <td>STAT 590. Graduate Seminar in Statistics.</td>\n",
+              "      <td>Term Typically Offered: F, W, SPPrerequisite: ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>73</th>\n",
+              "      <td>STAT 599. Thesis.</td>\n",
+              "      <td>Term Typically Offered: TBDPrerequisite: Gradu...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>74 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                               course                                       term offered\n",
+              "0                   DATA 100. Data Science for All I.  Term Typically Offered: F, W, SP2020-21 or lat...\n",
+              "1             DATA 301. Introduction to Data Science.  Term Typically Offered: F, W, SPPrerequisite: ...\n",
+              "2          DATA 401. Data Science Process and Ethics.  Term Typically Offered: FPrerequisites: DATA 3...\n",
+              "3   DATA 402. Mathematical Foundations of Data Sci...  Term Typically Offered: FPrerequisites: CSC 46...\n",
+              "4         DATA 403. Data Science Projects Laboratory.  Term Typically Offered: FConcurrent: DATA 401 ...\n",
+              "..                                                ...                                                ...\n",
+              "69             STAT 551. Statistical Learning with R.  Term Typically Offered: FPrerequisite: STAT 30...\n",
+              "70           STAT 566. Graduate Consulting Practicum.  Term Typically Offered: SPPrerequisite: STAT 4...\n",
+              "71                STAT 570. Selected Advanced Topics.  Term Typically Offered: TBDPrerequisite: Gradu...\n",
+              "72          STAT 590. Graduate Seminar in Statistics.  Term Typically Offered: F, W, SPPrerequisite: ...\n",
+              "73                                  STAT 599. Thesis.  Term Typically Offered: TBDPrerequisite: Gradu...\n",
+              "\n",
+              "[74 rows x 2 columns]"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pd.DataFrame(rows)"
       ]
     },
     {
